test/Fail/Issue5251-1.agda
{-# OPTIONS --erasure #-}

_ : @ω Set → Set₁
_ = λ (@0 _) → Set
